# snake-rust-game

./: Cargo.toml  README.md  main  main.rs  package-lock.json  package.json
pkg/: package.json  snake_game.d.ts  snake_game.js  snake_game_bg.wasm.d.ts
server/: index.js
src/: another_lib_v2.rs  lib.rs
www/: bootstrap.js  index.html  index.js  index.ts  notes.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/public/: bootstrap.js  index.html  index.js  index_ts.bootstrap.js  sum.wasm
www/utils/: date.js  rnd.js
